# rag-agent-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ollama.md  workspace.md
agent/: Cargo.toml
agent/src/: agent_cli.rs  agent_interactive.rs  ai_agent.rs  lib.rs
app/: Cargo.toml
app/benches/: benchmark.rs
app/src/: agent_interactive.rs  cli.rs  cli_interactive.rs  commands.rs  lib.rs  main.rs  ui.rs
app/tests/: debug_commands.rs  integration_test.rs
benches/: file_loader_bench.rs
chat/: Cargo.toml
chat/src/: chat_config.rs  lib.rs  main.rs  model_options.rs  prompt_template.rs
chat/tests/: chat_test.rs
configs/: Cargo.toml
configs/src/: constants.rs  embed_config.rs  lib.rs
db_graph/: Cargo.toml
db_graph/src/: ast.rs  main.rs
db_graph/src/test/: poc.rs
docloader/: Cargo.toml
embedder/: Cargo.toml
embedder/src/: embed_config.rs  file_loader.rs  lib.rs
embedder/tests/: file_loader_test.rs
go_notes/: Go Lang Learning Notes.txt
vectordb/: Cargo.toml
vectordb/src/: lib.rs  load_lancedb.rs  main.rs  query.rs  vector_index.rs  vector_load.rs  vector_schema.rs
vectordb/tests/: lancedb_query_test.rs  load_lancedb_test.rs
