[workspace]
members = ["agent", "app", "chat", "configs", "embedder", "vectordb"]

resolver = "2"

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
tree-sitter-rust = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-go = "0.23.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-scala = "0.23.4"
tree-sitter-language = "0.1.3"
futures = "0.3.31"
arrow = "54.1"
arrow-array = "54.1"
arrow-schema = "54.1"
chrono = { version = "0.4.38", features = ["serde"] }
lancedb = "0.18.2"
text-splitter = { version = "0.22.0", features = [
    "code",
    "markdown",
    "tiktoken-rs",
    "tokenizers",
] }
anyhow = "1.0.95"
#chrono = "0.4.38"
handlebars = "6.3.1"
rustls = "0.23.25"
hyper-rustls = "0.27.5"
hyper-util = "0.1.10"
http-body-util = "0.1.3"
bytes = "1.10.1"
http = "1.2.0"
mockito = "1.7.0"
tempdir = "0.3.7"
dialoguer = "0.11.0"
criterion = "0.5.1"
