[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
configs = { path = "../configs" }
vectordb = { path = "../vectordb" }
chat = { path = "../chat" }
embedder = { path = "../embedder" }
tokio.workspace = true
anyhow.workspace = true
lancedb.workspace = true
log.workspace = true
clap.workspace = true
dialoguer.workspace = true
