[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
vectordb = { path = "../vectordb" }
embedder = { path = "../embedder" }
chat = { path = "../chat" }
clap.workspace = true
log.workspace = true
anyhow.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
rustls.workspace = true
tokio.workspace = true
env_logger.workspace = true
lancedb.workspace = true
http.workspace = true
mockito.workspace = true
tempdir.workspace = true
dialoguer.workspace = true
criterion = "0.5.1"
