[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
configs = { path = "../configs" }
embedder = { path = "../embedder" }
vectordb = { path = "../vectordb" }
anyhow.workspace = true
bytes.workspace = true
http-body-util.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
handlebars.workspace = true
http.workspace = true
mockito.workspace = true
