[package]
name = "embedder"
version = "0.1.0"
edition = "2024"


[dependencies]
configs = { path = "../configs" }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
http-body-util.workspace = true
hyper.workspace = true
log.workspace = true
http.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-language.workspace = true
text-splitter.workspace = true