[package]
name = "vectordb"
version = "0.1.0"
edition = "2024"



[dependencies]
configs = { path = "../configs" }
embedder = { path = "../embedder" }
lancedb.workspace = true
anyhow.workspace = true
arrow.workspace = true
tokio.workspace = true
log.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
futures = "0.3.31"



