[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"


[dependencies]
configs = { path = "../configs" }
embedder = { path = "../embedder" }
log.workspace = true
tokio.workspace = true
futures.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
lancedb.workspace = true
anyhow.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
serde.workspace = true
